added styling to various pages

--- a/css/shared.css
+++ b/css/shared.css
@@ -6,6 +6,7 @@ body {
 	background: rgb(244, 245, 244);
 	color: rgb(0, 1, 0); /* @text-color */
 }
+
 a {
 	color: rgb(110, 160, 26); /* @link-color */
 	text-decoration: none;
@@ -16,3 +17,66 @@ a:focus {
 	text-decoration: underline;
 }
 
+h1, h2{
+    text-align: center;
+}
+
+.list li {
+    display: inline;
+    float: left;
+    padding: 10px;
+}
+
+.list button{
+    position: relative;
+    left: 140px;
+    bottom: 200px;
+}
+
+.content-module, .org-content, .volunteer-media{
+    border-radius: 10px;
+    margin-top: 20px;
+    padding: 50px;
+    background-color: #C0C0C0;
+}
+
+img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+dt{
+    font-weight: bold;
+}
+
+#footer{
+    /* - Grey Background
+     * - Yellow Line to separate between different fields */
+    background-color: #4D4D4D repeat top left;
+    padding: 100px;
+    display: block;
+}
+
+/* Main Home Page definitions
+ * Show a large image on top of the main page */
+.home-main-img{
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 100px;
+    background-color: #D0D0D0;
+}
+
+/* Content has to contain text font vienna jordan
+ * Have images within to show other org. logos */
+.home-content{
+    text-font:
+}
+
+/* Background image will be provided being a dark grey background with a
+ * yellow border and have at least 2 or 3 columns */
+/* Adopt Definitions */
+/* Volunteer Definitions */
+/* Donation Definitions */
+/* What were about Definitions */
