Add isotope filtering to adoption results page

--- a/_layouts/master_default.html
+++ b/_layouts/master_default.html
@@ -7,9 +7,10 @@
     {% endif %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    
+	  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.js"></script>
     <script type="text/javascript" src="/js/jquery.isotope.min.js"></script>
+    <script type="text/javascript" src="/js/shared.js"></script>
 	<link rel="stylesheet" href="/css/shared.css"/>
 </head>
 <body>
@@ -26,11 +27,11 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="/adopt">Adopt</a></li>
-			<li><a href="/donate">Donate</a></li>
+      			<li><a href="/donate">Donate</a></li>
           </ul>		  
-		  <ul class="nav navbar-nav navbar-right">
+    		  <ul class="nav navbar-nav navbar-right">
             <li><a href="/learn">Learn</a></li>
-			<li><a href="/volunteer">Volunteer</a></li>
+      			<li><a href="/volunteer">Volunteer</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
