Adjust links to karma-redesign branch

--- a/_layouts/master_default.html
+++ b/_layouts/master_default.html
@@ -9,9 +9,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.js"></script>
-    <script type="text/javascript" src="/js/jquery.isotope.min.js"></script>
-    <script type="text/javascript" src="/js/shared.js"></script>
-	<link rel="stylesheet" href="/css/shared.css"/>
+    <script type="text/javascript" src="karma-redesign/js/jquery.isotope.min.js"></script>
+    <script type="text/javascript" src="karma-redesign/js/shared.js"></script>
+	<link rel="stylesheet" href="karma-redesign/css/shared.css"/>
 </head>
 <body>
 	<div class="navbar navbar-default" role="navigation">
