--- a/css/basic.css
+++ b/css/basic.css
@@ -1,41 +1,147 @@
 
+
+/* =Elements
+----------------------------------------------- */
+
 body {
-	font: 125%/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font: 125%/1.5 Georgia, Times, "Times New Roman", serif;
 	margin: 0;
 	padding: 2em;
-	background: rgb(244, 245, 244);
-	color: rgb(0, 1, 0); /* @text-color */
+	background: rgb(254, 255, 254);
+	color: rgb(51, 52, 51); /* @text-color */
 }
 
 a {
-	color: rgb(110, 160, 26); /* @link-color */
-	text-decoration: none;
-}
-a:hover,
-a:active,
-a:focus {
-	text-decoration: underline;
+	color: rgb(235, 148, 47); /* @link-color */
 }
 
-p {
+.action a {
+	font-family: "Oswald", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	background-color: rgb(235, 148, 47); /* @link-color */
+	color: white;
+	text-transform: uppercase;
+	text-decoration: none;
+	display: inline-block;
+	font-weight: bold;
+	padding: 0.35em 0.65em;
+}
+
+ul.action,
+ul.action li {
+	list-style: none;
+	margin-left: 0;
+	padding-left: 0;
+}
+ul.action li {
+	display: inline;
+	margin-right: 0.75em;
+}
+
+dt {
+	font-weight: bold;
+	margin-top: 0.75em;
+}
+dt:after {
+	content: ":";
+}
+
+dd {
+	margin-left: 0;
+	padding-left: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-family: "Oswald", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6, p {
 	max-width: 33em;
+}
+
+img {
+	max-width: 100%;
+	height: auto;
+}
+
+section {
+	margin-top: 1.2em;
+	margin-bottom: 1.2em;
 }
 
 .cite {
 	font-style: italic;
 }
 
-nav ul,
-nav li {
+
+/* =Text
+----------------------------------------------- */
+.text h1 {
+	text-transform: uppercase;
+	font-size: 2em;
+}
+.text .intro p {
+	font-weight: 300;
+	font-size: 2.5em;
+	font-family: "Oswald", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+.text .intro p.action {
+	font-size: 1.25em;
+}
+
+
+/* =Header
+----------------------------------------------- */
+
+.header {
+	font-family: "Oswald", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	margin-bottom: 3em;
+}
+.header nav ul,
+.header nav li {
 	list-style: none;
 	margin-left: 0;
 	padding-left: 0;
 }
-nav li {
+.header nav li {
 	display: inline;
 	margin-right: 1.5em;
+	text-transform: uppercase;
+}
+.header nav a {
+	color: rgb(74, 74, 73);
+	text-decoration: none;
+}
+.header nav a:hover,
+.header nav a:active,
+.header nav a:focus {
+	text-decoration: underline;
 }
 
+@media (min-width: 40em) {
+	.header h2,
+	.header nav,
+	.header nav ul {
+		display: inline;
+	}
+	.header h2 img {
+		vertical-align: middle;
+	}
+	.header h2 {
+		margin-right: 3em;
+	}
+}
+
+
+/* =Programs
+----------------------------------------------- */
+.featured.program {
+	margin-top: 3em;
+	margin-bottom: 3em;
+}
+
+
+/* =Explore
+----------------------------------------------- */
 .explore,
 .explore li {
 	list-style: none;
@@ -49,5 +155,14 @@ nav li {
 	margin: 1em;
 }
 
+
+/* =About
+----------------------------------------------- */
+.about.text h1 {
+	font-size: 3em;
+	font-weight: 300;
+	text-transform: none;
+	color: rgb(67, 113, 163);
+}
 
 
