--- a/css/basic.css
+++ b/css/basic.css
@@ -4,7 +4,7 @@
 ----------------------------------------------- */
 
 body {
-	font: 125%/1.5 Georgia, Times, "Times New Roman", serif;
+	font: 125%/1.5 Georgia, Times, "Times New Roman", serif; /* @georgia */
 	margin: 0;
 	padding: 2em;
 	background: rgb(254, 255, 254);
@@ -16,7 +16,7 @@ a {
 }
 
 .action a {
-	font-family: "Oswald", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: "Oswald", "Helvetica Neue", Helvetica, Arial, sans-serif; /* @oswald */
 	background-color: rgb(235, 148, 47); /* @link-color */
 	color: white;
 	text-transform: uppercase;
@@ -51,7 +51,7 @@ dd {
 }
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: "Oswald", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: "Oswald", "Helvetica Neue", Helvetica, Arial, sans-serif; /* @oswald */
 }
 
 h1, h2, h3, h4, h5, h6, p {
@@ -82,7 +82,7 @@ section {
 .text .intro p {
 	font-weight: 300;
 	font-size: 2.5em;
-	font-family: "Oswald", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: "Oswald", "Helvetica Neue", Helvetica, Arial, sans-serif; /* @oswald */
 }
 .text .intro p.action {
 	font-size: 1.25em;
@@ -93,7 +93,7 @@ section {
 ----------------------------------------------- */
 
 .header {
-	font-family: "Oswald", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: "Oswald", "Helvetica Neue", Helvetica, Arial, sans-serif; /* @oswald */
 	margin-bottom: 3em;
 }
 .header nav ul,
@@ -153,6 +153,50 @@ section {
 	display: inline-block;
 	width: 300px;
 	margin: 1em;
+	position: relative;
+	font-family: "Oswald", "Helvetica Neue", Helvetica, Arial, sans-serif; /* @oswald */
+	text-transform: uppercase;
+}
+.explore li br {
+	display: none;
+}
+.explore li span {
+	position: absolute;
+	z-index: 1;
+	top: 0;
+	left: 0;
+	padding: 1.5em;
+	font-size: 0.8em;
+}
+.explore li strong {
+	font-weight: inherit;
+	font-size: 1.75em;
+	display: block;
+}
+.explore li a {
+	display: block;
+	color: white;
+	text-decoration: none;
+	background: rgb(235, 148, 47); /* @tangerine */
+}
+.explore li.lime a {
+	background: rgb(110, 181, 62); /* @lime */
+}
+.explore li.tangerine a {
+	background: rgb(235, 148, 47); /* @tangerine */
+}
+.explore li.strawberry a {
+	background: rgb(207, 67, 41); /* @strawberry */
+}
+.explore li img {
+	opacity: 0.2;
+	transition: opacity 0.2s;
+	display: block;
+}
+.explore li a:hover  img,
+.explore li a:active img,
+.explore li a:focus  img {
+	opacity: 0;
 }
 
 
@@ -164,5 +208,6 @@ section {
 	text-transform: none;
 	color: rgb(67, 113, 163);
 }
+
 
 
