text is shown over hovering image in explore tab

--- a/css/basic.css
+++ b/css/basic.css
@@ -199,6 +199,22 @@ section {
 	opacity: 0;
 }
 
+.img-description{
+	opacity: 0;
+	transition: opacity 0.2s;
+	display: block;
+}
+
+li:hover p.img-description{
+	opacity: 1;
+}
+
+p.img-description{
+	font: 100%/1.5 Georgia, Times, "Times New Roman", serif; /* @georgia */
+	text-transform: lowercase ;
+    font-weight: normal;
+}
+
 
 /* =About
 ----------------------------------------------- */
