--- a/css/basic.css
+++ b/css/basic.css
@@ -210,8 +210,8 @@ li:hover p.img-description{
 }
 
 p.img-description{
+    text-transform: none;
 	font: 100%/1.5 Georgia, Times, "Times New Roman", serif; /* @georgia */
-	text-transform: lowercase ;
     font-weight: normal;
 }
 
@@ -226,4 +226,9 @@ p.img-description{
 }
 
 
-
+/* =Details
+ * -----------------------------------------------*/
+#details-video {
+    display: block;
+    margin: auto;
+}
