--- a/css/basic.css
+++ b/css/basic.css
@@ -52,6 +52,7 @@ dd {
 
 h1, h2, h3, h4, h5, h6 {
 	font-family: "Oswald", "Helvetica Neue", Helvetica, Arial, sans-serif; /* @oswald */
+    text-transform: uppercase;
 }
 
 h1, h2, h3, h4, h5, h6, p {
