--- a/css/basic.css
+++ b/css/basic.css
@@ -251,3 +251,26 @@ p.img-description{
     padding:5px;
 }
  p, h1{}
+
+/* =Adopt
+* -------------------------------------------------*/
+
+.adopt-search fieldset
+{
+	margin: 0;
+	padding: 0;
+	border: 0;
+	float: left;
+	width: 200px;
+	background-color: #f5f5f5;
+}
+
+.adopt-search fieldset ul
+{
+	margin:0;
+}
+
+.adopt-search fieldset ul li
+{
+	list-style-type:none;
+}
