--- a/css/basic.css
+++ b/css/basic.css
@@ -84,6 +84,7 @@ section {
 	font-weight: 300;
 	font-size: 2.5em;
 	font-family: "Oswald", "Helvetica Neue", Helvetica, Arial, sans-serif; /* @oswald */
+	max-width: 20em;
 }
 .text .intro p.action {
 	font-size: 1.25em;
@@ -144,6 +145,7 @@ section {
 /* =Footer
 ----------------------------------------------- */
 .footer {
+	margin-top: 3em;
 	background: rgb(234, 148, 47);
 	color: white;
 	padding: 2em;
@@ -284,6 +286,25 @@ p.img-description{
 	font-weight: 300;
 	text-transform: none;
 	color: rgb(67, 113, 163);
+}
+.about .stories {
+	margin-top: 3em;
+	margin-bottom: 3em;
+}
+.about .stories ul,
+.about .stories li {
+	list-style: none;
+	margin-left: 0;
+	padding-left: 0;
+}
+.about .stories ul:after {
+	/* @clearfix */
+	content: "";
+	display: table;
+	clear: both;
+}
+.about .stories li {
+	float: left;
 }
 
 
