--- a/css/basic.css
+++ b/css/basic.css
@@ -145,6 +145,9 @@ section {
 
 /* =Footer
 ----------------------------------------------- */
+.home + .footer {
+	margin-top: 0;
+}
 .footer {
 	margin-top: 3em;
 	background: rgb(234, 148, 47);
