Set up adopt page, get much closer to design

--- a/css/adopt.less
+++ b/css/adopt.less
@@ -1,37 +1,123 @@
-form.adopt-search{
-	fieldset{
-		width:400px;
-		float:left;
-	}
 
-	ul{
+.adopt-filter-group{
+	width:24%;
+	float:left;
+	font-family: "Oswald", "Helvetica Neue", Helvetica, Arial, sans-serif; /* @oswald */
+
+	ul.filter-list{
+		padding:0;
 		li{
 			list-style-type: none;
 		}
 	}
-
-	button{
-		background-color: #9999ff;
-		width: 120px;
-		height: 60px;
-		cursor: pointer;
-		margin: 0 auto;
-		display: block;
-	}
 }
 
-ul.filter-list{
-	li{
-		float:left;
-		margin-left:1em;		
+.form-filters{
+	display:inline-block;
+
+	.adopt-filter-group{
+		min-width:180px;
 	}
 }
-
 .isotope-list
 {
-	.isotope-item{
+	.dog-entry{
+		margin:10px;
+		width:300px;
+		min-height:420px;
+		padding:1em;
+		background-color:#f5f5f5;
+
+		.name-text{
+			margin-top:-4em;
+		}
+		.dog-name{
+			margin:0 0 0 .5em;
+			color:#f5f5f5;
+		}
+
+		.dog-subname{
+			margin:0 0 0 .5em;
+			color: #d5d5d5;
+		}
+
 		p{
-			width:200px;
+			max-width:100%;
+			font-family: "Oswald", "Helvetica Neue", Helvetica, Arial, sans-serif; /* @oswald */
+		}
+
+		div.dog-tags{
+			font-size:0.5em;
+
+			span.dog-tag{
+				background-color:#b5b5b5;
+				margin: 0 0.5em;
+				padding:0.25em;
+				text-transform: uppercase;
+			}
+		}
+	}
+}
+
+/**** Isotope Filtering ****/
+
+.isotope-item {
+  z-index: 2;
+}
+
+.isotope-hidden.isotope-item {
+  pointer-events: none;
+  z-index: 1;
+}
+
+/**** Isotope CSS3 transitions ****/
+
+.isotope,
+.isotope .isotope-item {
+  -webkit-transition-duration: 0.8s;
+     -moz-transition-duration: 0.8s;
+      -ms-transition-duration: 0.8s;
+       -o-transition-duration: 0.8s;
+          transition-duration: 0.8s;
+}
+
+.isotope {
+  -webkit-transition-property: height, width;
+     -moz-transition-property: height, width;
+      -ms-transition-property: height, width;
+       -o-transition-property: height, width;
+          transition-property: height, width;
+}
+
+.isotope .isotope-item {
+  -webkit-transition-property: -webkit-transform, opacity;
+     -moz-transition-property:    -moz-transform, opacity;
+      -ms-transition-property:     -ms-transform, opacity;
+       -o-transition-property:      -o-transform, opacity;
+          transition-property:         transform, opacity;
+}
+
+/**** disabling Isotope CSS3 transitions ****/
+
+.isotope.no-transition,
+.isotope.no-transition .isotope-item,
+.isotope .isotope-item.no-transition {
+  -webkit-transition-duration: 0s;
+     -moz-transition-duration: 0s;
+      -ms-transition-duration: 0s;
+       -o-transition-duration: 0s;
+          transition-duration: 0s;
+}
+
+.adopt-filter-group{
+	width: 25%;
+	float: left;
+
+	ul{
+		margin:0;
+
+		li{
+			list-style-type:none;
 		}
 	}
 }
